# AssimpSceneImportExPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: assimpSceneImportEx.cmake
src/: CMakeLists.txt  assimpex.json  assimphelpersex.cpp  assimphelpersex.h  assimpimporterex.cpp  assimpimporterex.h  main.cpp
